py-app1/template/k8s/k8s-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backstage
  name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  strategy: {}
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
      - image: aumthakkar/backstage_production:v1
        name: backstage
        ports:
        - containerPort: 7007
        resources: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backstage
  name: backstage
spec:
  ports:
  - port: 7007
    protocol: TCP
    targetPort: 7007
  selector:
    app: backstage

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
spec:
  rules:
  - host: "backstage.test.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backstage
            port:
              number: 7007
